:pushpin: Use Java 17 for main module